# SimpleGenericParser

./: SimpleGenericParser.cabal  flake.nix
src/: SimpleGenericParser.hs
